Eforce - Personal Dev/src/objects/Call_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Call_Feedback__c</fullName>
        <label>Call Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <label>Call</label>
        <referenceTo>Call__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Planned_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Planned Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Feedback__c</fullName>
        <label>Product Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>TO fetch the product group of a specific brand</description>
        <formula>Product__r.Parent_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>MyProduct__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>CallDetails1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CallDetail-{000000}</displayFormat>
        <label>Call Detail Name1</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Feedback_Mandatory</fullName>
        <active>true</active>
        <description>Product feedback is mandatory field during Call execution</description>
        <errorConditionFormula>ISPICKVAL(Call__r.Status__c ,&quot;Completed&quot;) &amp;&amp; (isblank( Product_Feedback__c ))</errorConditionFormula>
        <errorMessage>Please enter Product Feedback comments during submission of a call.</errorMessage>
    </validationRules>
</CustomObject>